syntax = "proto3";
import public "SocketCommon.proto";
package com.tigerbrokers.stock.openapi.client.socket.data.pb;

option java_package = "com.tigerbrokers.stock.openapi.client.socket.data.pb";
option java_multiple_files = true;

message QuoteBBOData {

  string symbol = 1;
  SocketCommon.QuoteType type = 2; // BBO
  uint64 timestamp = 3;

  double askPrice = 17;
  sint64 askSize = 18;
  optional uint64 askTimestamp = 19; // Pre/Post-Mkt data not support
  double bidPrice = 20;
  sint64 bidSize = 21;
  optional uint64 bidTimestamp = 22; // Pre/Post-Mkt data not support

}